# line-drawing-vectorization-polyvector-flow

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  docker-compose.yml  predict_points.sh  readme.md  requirements.txt  run_on_auto.sh  run_point_prediction.sh  run_vectorization.sh  run_vectorization_folder.sh
cmake/: FindGUROBI.cmake  FindOpenCV.cmake
examples/: .gitignore  README.md
inputs/: example.pts
labeled_drawings/: README.md  download1.sh  download2.sh  download3.sh  labelfolder_to_pts.py  makedataset.py
matlab/: Dx.m  Dy.m  README.md  anisotropicFrameFieldFun.m  computeTangentsEtc.m  drawNPolyDeg4_2019.m  findAndSortRoots_2019.m  findRoots_2019.m  l2_regularizer_2019.m  polynomial_energy_2019.m  polyvector_flow.m  testAlignCurveToFrameField.m  totalEnergy_2019.m
prediction/: layers.py  sketchyimage.py  usemodel.py
src/: AlmostReebGraph.cpp  CMakeLists.txt  ChainDecomposition.h  ChainUtils.cpp  ChainUtils.h  ContractDeg2.cpp  ContractDeg2.h  Coverage.cpp  Coverage.h  CurveMatchingCost.h  ExportSVG.cpp  ExportSVG.h  FillHole.h  FindAllPaths.cpp  FindAllPaths.h  FitParabola.cpp  FitParabola.h  FrameFieldFlow.cpp  FrameFieldFlow.h  FrameFieldFlowAux.cpp  FrameFieldFlowAux.h  GraphToTracing.cpp  GraphToTracing.h  GurobiLSLinIneqSolver.cpp  GurobiLSLinIneqSolver.h  HermiteSpline.h  LSEquationsAndConstraints.cpp  LSEquationsAndConstraints.h  Optimizer.cpp  OrientRoots.cpp  OrientRoots.h  Params.h  RemoveShortBranches.cpp  Resample.h  SelectCurves.cpp  SelectCurves.h  ShortestPathConstrained.cpp  ShortestPathConstrained.h  Simplify.cpp  Simplify.h  (+20 more)
